=======
CHANGES
=======

1.9.2 (unreleased)
------------------

- XLS import of boolean or required demo fields (https://bugs.launchpad.net/bugs/859424)
- Make sandbox with virtualenv. Fixes bootstrap with Python 2.7.
- Terms are listed upside down (https://bugs.launchpad.net/bugs/872240)


1.9.1 (2011-10-07)
------------------

- Fully translatable.
- Experimental implementation of Selenium testing API.
- Fixed or disabled some tests.
- Page title.
- Updated translations.

Export
++++++

- Added small sample data xls.
- Added boolean and date demo field support to xls import.
- Fixed export of booleans bug (https://bugs.launchpad.net/bugs/796791)


1.9.0 (2011-09-21)
------------------

This is a first release from "flourish" branch that was being worked on
tirelessly since June. 

It features a new, much improved look and navigation, a total redesign.

There are too many changes to list.

Export
++++++

- XLS import/export of contacts (https://launchpad.net/bugs/608873)

API changes
+++++++++++

- Timetables rewrite
- Pluggable traverser refactoring, traversers lost redundant request parameter
- New `flourish` content, viewlet, page, breadcrumbs, resourceLibrary and
  ZCML directives for them.


1.7.0 (2011-09-15)
------------------

New features
++++++++++++

- Linked sections view for a section, allowing to extend a section to another term
  or link an existing section (https://launchpad.net/bugs/424498)
- XLS importer now automatically links sections with same ID that are marked to link

Cleanup
+++++++

- Removed help (https://launchpad.net/bugs/789157)
- Removed school setup data framework (https://launchpad.net/bugs/307237)
- Made ``zope.app.apidoc`` dependency optional, it is only useful for
  developers. Add ``schooltool [apidoc]`` to package:eggs in buildout.cfg
  if you want API Docs.
- Remove dependency on ``zope.app.zcmlfiles`` and many others implied by it.


1.6.1 (2011-09-14)
------------------
